# rustysd

./: .dockerignore  .gitignore  Cargo.toml  Readme.md  build_all.sh  feature-comparison.md  features_commonly_used.md  oneshot_output  redesign.md
.github/workflows/: rust.yml
config/: rustysd_config.toml
doc/: ControlInterface.md  PidHandling.md  SocketHandling.md  StdioHandling.md  systemd.service.html  systemd.socket.html
docker_test_units/: default.target  sockets.target  test.service  test2.service
dockerfiles/: Dockerfile  Readme.md  build_docker_image.sh  install_musl_target.sh  run_docker_image.sh
example_boot_units/: Readme.md  default.target  getty.target  getty1.service  getty2.service  getty3.service  local_filesystem.target  mount_all.service
src/: config.rs  control.rs  dbus_wait.rs  fd_store.rs  lib.rs  logging.rs  main.rs  notification_handler.rs  runtime_info.rs  services.rs  shutdown.rs  signal_handler.rs  socket_activation.rs  sockets.rs  start_service.rs  unit_parser.rs  units.rs  unix_listener_select.rs  wait_for_socket_activation.rs
src/control/: control.rs  jsonrpc2.rs  mod.rs
src/platform/: mod.rs  (+9 more)
test_c_service/: test_service  test_service.c
test_scenario/: run_scenario.sh
test_services/: test.sh
test_units/: cservice.service  cservice.socket  cservice2.socket  ls.service  ls2.service  ls3.service  ls4.service  oneshot.service  service_using_dbus.service  test.service  test.socket  test2.service  test2.socket  test_second.socket  unloaded.service  unloaded.socket
test_units_disabled/: cservice.service  cservice2.socket  cservice3.socket  ls.service  ls2.service  ls3.service  ls4.service  service_using_dbus.service
tools/: gen_feature_comparison.py
(+69 files in other folders)
