[package]
name = "rustysd"
version = "0.1.0"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2018"

[dependencies]
signal-hook = "0.3"
libc = "0.2"
nix = "0.24"
log = "0.4"
fern = "0.6"
chrono = "0.4"
threadpool = "1.7"
serde_json = "1.0"
toml = "0.5"
dbus = {version = "*", optional = true}
shlex = "0.1"
pico-args = "0.3"

[features]
dbus_support = ["dbus"]
linux_eventfd = []
cgroups = []
