[package]
name = "rustysd"
version = "0.1.0"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2018"

[dependencies]
signal-hook = "0.3"
libc = "0.2"
nix = "0.26"
log = "0.4"
fern = "0.6"
chrono = "0.4"
threadpool = "1.8"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.7"
dbus = {version = "0.9", optional = true}
shlex = "1.1"
clap = { version = "4.1", features = ["derive"] }
shmemfdrs = "0.1"
which = "4.4"

[features]
dbus_support = ["dbus"]
linux_eventfd = []
cgroups = []
